--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+# JDBC \uC138\uC158 \uC800\uC7A5\uC18C \uC124\uC815
+spring.session.store-type=jdbc
 
 server.servlet.encoding.force-response=true
 
