--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,6 @@ spring.session.store-type=jdbc
 
 server.servlet.encoding.force-response=true
 
+# application-oauth.properties ? ??
 spring.profiles.include=oauth
+
