--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,19 @@
-spring.datasource.url=jdbc:h2:mem://localhost/~/test2;MODE=MYSQL
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/board?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=jhm0919
+
 # ?? ?? on
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 spring.jpa.show-sql=true 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.h2.console.enabled=true
 
 # JDBC \uC138\uC158 \uC800\uC7A5\uC18C \uC124\uC815
 spring.session.store-type=jdbc
-
+spring.session.jdbc.initialize-schema=always
 server.servlet.encoding.force-response=true
 
 # application-oauth.properties ? ??
