--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,20 @@ server.servlet.encoding.force-response=true
 # application-oauth.properties ? ??
 spring.profiles.include=oauth
 
+# ?? ???
+
+# ?? ??? ???? ??
+spring.servlet.multipart.enabled=true
+
+# ???? ??? ?? ????
+#spring.servlet.multipart.location=volumes/ming/git/learnfromcode:\\upload
+spring.servlet.multipart.location=C:/springboot-webservice/src/main/resources/static/files/
+
+# ??? ?? ??? ?? ??
+spring.servlet.multipart.max-request-size=30MB
+
+# ?? ??? ?? ??
+spring.servlet.multipart.max-file-size=10MB
+
+#  ???? ?? ??
+#com.example.upload.path = \upload
