--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.session:spring-session-jdbc'
-
+  implementation 'org.springframework.boot:spring-boot-starter-validation'
   implementation 'com.fasterxml.jackson.core:jackson-databind'
   implementation 'commons-fileupload:commons-fileupload:1.4'
   implementation 'commons-io:commons-io:2.6'
