--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/board?useSSL=false&characterEn
 spring.datasource.username=root
 spring.datasource.password=jhm0919
 
-# ?? ?? on
+# \uC6B4\uC601\uC2DC\uC5D0\uB294 \uBB34\uC870\uAC74 none\uC73C\uB85C \uBC14\uAFD4\uC57C\uD568
 spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jpa.show-sql=true 
