--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,10 +23,12 @@ spring.profiles.include=oauth
 spring.servlet.multipart.enabled=true
 
 #spring.servlet.multipart.location=volumes/ming/git/learnfromcode:\\upload
-spring.servlet.multipart.location=C:/springboot-webservice/src/main/resources/static/files/
+#spring.servlet.multipart.location=C:/springboot-webservice/src/main/resources/static/files/
 
 # ??? ?? ??? ?? ??
 spring.servlet.multipart.max-request-size=30MB
 
 # ?? ??? ?? ??
 spring.servlet.multipart.max-file-size=10MB
+
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
