--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,12 @@ dependencies {
 	implementation 'commons-io:commons-io:2.6'
 	implementation 'org.apache.tika:tika-core:2.4.1'
 
-	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 //	implementation 'javax.persistence:javax.persistence-api:2.2'
+
+	// mail
+	implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.2'
+
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
@@ -44,7 +48,6 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test:'
 	annotationProcessor('org.projectlombok:lombok')
-
 }
 
 tasks.named('test') {
