--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,17 @@ spring.servlet.multipart.enabled=true
 
 #spring.servlet.multipart.location=volumes/ming/git/learnfromcode:\\upload
 #spring.servlet.multipart.location=C:/springboot-webservice/src/main/resources/static/files/
+imageUrl.tempLocation=C:\\springboot-webservice\\src\\main\\resources\\static\\temp\\
+imageUrl.localLocation=C:\\springboot-webservice\\src\\main\\resources\\static\\files\\
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+#SPRING_MAIL_USERNAME \uACFC SPRING_MAIL_PASSWORD \uC5D0\uB294 \uBA54\uC77C\uC744 \uC1A1\uC2E0\uD560 \uACC4\uC815\uC744 \uC801\uC5B4\uC57C\uD55C\uB2E4.
+spring.mail.username=boardserviceauth@gmail.com
+spring.mail.password=cyxv vuta tnui ozkr
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.timeout=25000
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 # ??? ?? ??? ?? ??
 spring.servlet.multipart.max-request-size=30MB
